--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,7 @@ h1 {
     padding: 100px 20px; /* Section padding */
     max-width: 800px; /* Max width for content */
     margin: 0 auto; /* Center the section */
-    text-align: left; /* Align text to the left */
+    text-align: center; /* Align text to the left */
     border-bottom: 1px solid #e0e0e0; /* Section border */
     background-color: #fff; /* Section background */
 }
@@ -62,7 +62,7 @@ h2 {
     font-weight: normal; /* Regular weight for subheading */
     letter-spacing: 0.1em; /* Increased letter spacing */
     color: #000; /* Subheading color */
-    margin-bottom: 40px; /* Space below subheading */
+    margin-bottom: 20px; /* Space below subheading */
     text-transform: uppercase; /* Uppercase text */
 }
 
@@ -71,22 +71,22 @@ h3 {
     font-weight: normal; /* Regular weight for subheading */
     letter-spacing: 0.1em; /* Increased letter spacing */
     color: #000; /* Subheading color */
-    margin-bottom: 40px; /* Space below subheading */
+    margin-bottom: 10px; /* Space below subheading */
     text-transform: uppercase; /* Uppercase text */
 }
 
 p {
-    text-align: left; /* Center footer text */
+    text-align: left;
     font-size: 18px; /* Paragraph font size */
     line-height: 1.8; /* Improved line height for paragraphs */
     color: #666; /* Light gray text color */
     font-weight: normal; /* Regular weight for paragraphs */
-    letter-spacing: 0.05em; /* Slightly increased letter spacing */
+    letter-spacing: 0.01em; /* Slightly increased letter spacing */
 }
 
 a {
     color: #000; /* Link color */
-    text-decoration: underline; /* Underline links */
+    font-weight: bold; /* Bold links */
 }
 
 a:hover {
